[gd_scene load_steps=2 format=3 uid="uid://mobilenav"]

[ext_resource type="Script" path="res://scripts/hud/MobileNavigation.gd" id="1_mobile_nav"]

[node name="MobileNavigation" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_mobile_nav")

[node name="NavigationBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="NavigationBar"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ButtonContainer" type="HBoxContainer" parent="NavigationBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="BuildButton" type="Button" parent="NavigationBar/MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(180, 90)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 28
toggle_mode = true
text = "Bauen"

[node name="DemolishButton" type="Button" parent="NavigationBar/MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(180, 90)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 28
toggle_mode = true
text = "Abrei√üen"
